        (This is a default mod setting to prevent an infinite coin exploit.)
    - Dropdown added to hex cores for viewing trades with different qualities on the items, particularly used to see how coin inputs and outputs are affected by quality.
    - Production statistics now include the statistics of currently active trading on each surface.
  Minor Features:
    - Planets now show in item tooltips to indicate that the item value is strongly tied to that planet.
  Ease of use:
    - Press T (default keybind) to teleport to the hex core under your mouse pointer.
    - Press Y (default keybind) to claim the hex core under your mouse pointer.
  Optimizations:
    - Optimized trade batch calculation.
    - Optimized global hex core trade processing.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 13/5/25
  Bugfixes:
    - Faraway hexes had no trades sometimes.
    - Trade overview input and output filtering wasn't combining correctly.
    - "Show claimed only" trade overview filter was showing only unclaimed trades.
  Features:
    - Trade overview now has options to filter for exact inputs or exact outputs.
    - Trade overview now has sorting options for various metrics.
    - Trade overview now shows progress during processing of trades to be listed.
    - Trade overview trade content filters can now be swapped by clicking on the trade arrow between them.
  Optimizations:
    - Made trade overview loading less UPS-intensive.
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 12/5/25
  Major Features:
    - Added [planet=vulcanus].
  Balancing:
    - Decreased the rate at which item values scale on Nauvis.
    - Reduced productivity bonuses to half, except for the quest reward.
  Bugfixes:
    - Fixed volume calculation for the extra trades added by bronze rank items.
  Optimizations:
    - Optimized trade overview.