@@ -1,17 +1,8 @@
 
-- allow traveling to other planets by re-enabling their technologies
-
 - add dungeon structures (spanning many hexes, containing enemy turrets and traps)
-
-- add claim tool
 
 - make spoilable items have a bonus to their value
 
 - make item value tooltip show for interplanetary items in hex core trades
 
-
 - add coin splitting buttons at the top
-
-
-BUGS:
-- rejoining a multiplayer game gives rewards repeatedly
