@@ -4,6 +4,7 @@ gravity-coin=Gravity Coin
 meteor-coin=Meteor Coin
 hexaprism-coin=Hexaprism Coin
 hexaprism=Hexaprism
+claim-tool=Claim Hexes
 
 [item-description]
 hex-coin=[font=heading-1][color=yellow]TIER 1 COIN[.color][.font]\nCan be traded. Primarily used on [planet=nauvis].\n\nAuto-converted to higher tiers as needed:\n[img=item.hex-coin]x100,000 <--> [img=item.gravity-coin]x1\n[img=item.gravity-coin]x100,000 <--> [img=item.meteor-coin]x1\n[img=item.meteor-coin]x100,000 <--> [img=item.hexaprism-coin]x1
@@ -11,6 +12,7 @@ gravity-coin=[font=heading-1][color=purple]TIER 2 COIN[.color][.font]\nCan be tr
 meteor-coin=[font=heading-1][color=cyan]TIER 3 COIN[.color][.font]\nCan be traded. Primarily used on [planet=aquilo].\n\nSymbolizes your ability to ward off large asteroids on your way to a distant planet.\n\nAuto-converted to higher or lower tiers as needed:\n[img=item.hex-coin]x100,000 <--> [img=item.gravity-coin]x1\n[img=item.gravity-coin]x100,000 <--> [img=item.meteor-coin]x1\n[img=item.meteor-coin]x100,000 <--> [img=item.hexaprism-coin]x1
 hexaprism-coin=[font=heading-1][color=blue]TIER 4 COIN[.color][.font]\nCan be traded. [color=cyan]+1000% to Bragging Rights.[.color]\n\nAuto-converted to lower tiers as needed:\n[img=item.hex-coin]x100,000 <--> [img=item.gravity-coin]x1\n[img=item.gravity-coin]x100,000 <--> [img=item.meteor-coin]x1\n[img=item.meteor-coin]x100,000 <--> [img=item.hexaprism-coin]x1
 hexaprism=A crystalline shard of pure hexagonal energy. Only the most experienced engineer can make use of this.
+claim-tool=Claim all hex cores in the selected area.
 
 [entity-name]
 hex-core=Hex Core
@@ -25,6 +27,9 @@ hextreme=Hextreme
 [controls]
 claim-hex-core=Claim Hex Core
 teleport-to-hex-core=Teleport to Hex Core
+
+[shortcut-name]
+claim-tool=Claim Hexes
 
 [mod-setting-name]
 hextorio-claimed-hex-tile=Claimed Hex Tile
