@@ -4,3 +4,5 @@ require("prototypes.sprite")
 require("prototypes.recipe")
 require("prototypes.entity")
 require("prototypes.custom_inputs")
+require("prototypes.selection_tool")
+require("prototypes.shortcut")
