@@ -1,0 +1,16 @@
+
+local shortcut = {
+    type = "shortcut",
+    name = "claim-tool",
+    action = "spawn-item",
+    item_to_spawn = "claim-tool",
+    order = "z",
+    icon_size = 32,
+    icon = "__hextorio__/graphics/icons/hexagon-x32.png",
+    small_icon_size = 24,
+    small_icon = "__hextorio__/graphics/icons/hexagon-x24.png",
+}
+
+
+
+data:extend({shortcut})
